[gd_scene load_steps=6 format=2]

[ext_resource path="res://tanks/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://tanks/Enemy1.gd" type="Script" id=2]
[ext_resource path="res://assets/onlyObjects_retina_rotated.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 35.152, 38.7286 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 819.123

[node name="Enemy1" instance=ExtResource( 1 )]

script = ExtResource( 2 )
Bullet = null
speed = 150
rotation_speed = 1.0
gun_cooldown = 1.0
health = 20
turret_speed = 1.0
detect_radius = 200

[node name="Body" parent="." index="0"]

texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 308, 262.392, 79, 82.5 )
_sections_unfolded = [ "Region" ]

[node name="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.115982, -1.62375 )
shape = SubResource( 1 )

[node name="Turret" parent="." index="2"]

rotation = 0.0141382
texture = ExtResource( 3 )
offset = Vector2( 30, 0 )
region_enabled = true
region_rect = Rect2( 684.642, 13.4334, 59.625, 24.25 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Muzzle" parent="Turret" index="0"]

position = Vector2( 69.7854, -0.875977 )

[node name="DetectRadius" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

shape = SubResource( 2 )

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]

[connection signal="body_shape_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_shape_exited"]


